--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Match 3 Tech</title>
-    <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Match 3 Tech 6x6</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
 <div class="top-bar">
-    <div class="level">Уровень: <span id="level">1</span></div>
-    <div class="xp-bar"><div id="xp-fill"></div></div>
+  <div class="level">Уровень: <span id="level">1</span></div>
+  <div class="xp-bar"><div id="xp-fill"></div></div>
 </div>
 
 <div class="game-container">
-    <div id="board"></div>
+  <div id="board"></div>
 </div>
 
-<div class="bottom-menu">
-    <button class="tab active">Игра</button>
-    <button class="tab">Магазин</button>
-    <button class="tab">Инвентарь</button>
-    <button class="tab">Квесты</button>
-    <button class="tab">Профиль</button>
+<!-- Профиль -->
+<div id="profile-container" class="hidden">
+  <h2>Профиль</h2>
+  <label>Имя игрока:</label>
+  <input type="text" id="player-name"/>
+  <div>Уровень: <span id="profile-level">1</span></div>
+  <button id="save-name">Сохранить</button>
 </div>
 
 <!-- LEVEL UP -->
 <div id="levelup-overlay">
-    <div class="levelup-window">
-        <div class="scan-line"></div>
-        <h2>LEVEL UP!</h2>
-        <h3 id="new-level-num">2</h3>
-        <button id="level-ok">OK</button>
-    </div>
+  <div class="levelup-window">
+    <div class="scan-line"></div>
+    <h2>LEVEL UP!</h2>
+    <h3 id="new-level-num">2</h3>
+    <button id="level-ok">OK</button>
+  </div>
+</div>
+
+<!-- Нижнее меню -->
+<div class="bottom-menu">
+  <button class="tab active" data-tab="game">Игра</button>
+  <button class="tab" data-tab="profile">Профиль</button>
 </div>
 
 <script src="script.js"></script>
